# devgoldyutils

./: .gitignore  Makefile  README.md  pyproject.toml  readme.md  setup.py
devgoldyutils/: __init__.py  better_get.py  colours.py  dataclasses.py  debugging.py  dict_classes.py  errors.py  file_configs.py  logging.py  strings.py
devgoldyutils/console/: __init__.py  colours.py  legacy_colours.py
src/: setup.py
src/devgoldyutils/: console.py
