[project]
name = "devgoldyutils"
description = "My own utils library I use throughout all my python projects."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.me"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = [
    "Goldy Utils", "Dev Goldy Utils", "devgoldyutils", "devgoldy"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11'
]
dependencies = [
    
]

version = "2.5.4"

[project.optional-dependencies]
pprint = [
    "prettyprinter"
]

[project.urls]
GitHub = "https://github.com/THEGOLDENPRO/devgoldyutils"
BugTracker = "https://github.com/THEGOLDENPRO/devgoldyutils/issues"
ChangeLog = "https://github.com/THEGOLDENPRO/devgoldyutils/master/CHANGELOG.md"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["devgoldyutils"]